site/themes/jdi5/css/elements.css.less
@import "properties.css.less";

.base-font() {
  font-family: Helvetica, Arial, "Nimbus Sans L", sans-serif;
  font-size: 16px;
}

.element-invisible() {
  position: absolute !important;
  clip: rect(1px 1px 1px 1px);
  clip: rect(1px, 1px, 1px, 1px);
}

.field() {
  background-color: #fdfdfd;
  border-color: #999 #aaa #aaa #999;
  border-radius: 4px;
  box-shadow: inset 1px 1px 5px rgba(0, 0, 0, 0.25);
  color: #666;
  max-width: 100%;
  .transition(box-shadow, 0.5s);

  &:focus {
    background-color: #fff;
    border-color: #24f;
    box-shadow: inset 1px 1px 5px rgba(0, 0, 0, 0.25), 0 0 5px rgba(34, 68, 255, 1);
    color: #222;
    outline: 0;
    .transition(box-shadow, 0.1s);
  }
}

.button() {
  background: #222;
  background: -moz-linear-gradient(
    top center,
    #595959 0%,
    #222  100%
  );
  background: -webkit-gradient(
    linear, left top, left bottom,
    color-stop(0, #595959),
    color-stop(1, #222)
  );
  border-color: transparent transparent rgba(0, 0, 0, 0.25);
  border-radius: 5px;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
  color: #fff;
  text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.5);
  .transition(all, 0.5s);

  &:hover {
    background-color: #000;
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #404040), color-stop(1, #000));
    background: -moz-linear-gradient(top center, #404040 0%, #000 100%);
  }
}

.field-inline() {
  .field-items,
  .field-label,
  .field-item {
    display: inline-block;
  }
}

.field-value-comma() {
  .field-label::after {
    content: ' ';
  }

  .field-item::before {
    content: ', ';
  }

  .field-item:first-child::before {
    content: '';
  }
}

.alternated-list() {
  & > li:first-child,
  & > .view-content > .views-row-first {
    border-top: 1px dashed #ddd;
  }

  & > li,
  & > .view-content > .views-row {
    border-bottom: 1px dashed #ddd;
  }

  & > li:last-child,
  & > .view-content > .views-row-last {
  }

  & > li:nth-child(odd),
  & > .view-content > .views-row-odd {
  }

  & > li:nth-child(even),
  & > .view-content > .views-row-even {
    background-color: rgba(0, 0, 0, 0.02);
  }
}

.links() {
  overflow: hidden;

  .links {
    float: right;

    li {
      margin: 0;

      a {
        .button;
      }
    }
  }
}

